<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/mvcButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="?attr/selectableItemBackground"
        android:text="@string/mvc"
        />

    <TextView
        android:id="@+id/mvpButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="?attr/selectableItemBackground"
        android:text="@string/mvp"
        />

    <TextView
        android:id="@+id/mvvmButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="?attr/selectableItemBackground"
        android:text="@string/mvvm"
        />

</LinearLayout>